Add Java 25 support (#936)